log
sá., 19 de abr. de 2025  7:55:22: 
 tests:  0|6
total_score: 0/70
eeef3b7
sá., 19 de abr. de 2025 11:10:15: 
 hashmap.c | 124 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 123 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f028909
sá., 19 de abr. de 2025 11:12:50: 
 hashmap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
3735c2b
sá., 19 de abr. de 2025 11:13:53: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
6f185f9
sá., 19 de abr. de 2025 11:40:25: 
 hashmap.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 30/70
486494e
sá., 19 de abr. de 2025 11:45:19: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e97a5c2
sá., 19 de abr. de 2025 12:12:31: 
 hashmap.c | 34 ++++++++++++----------------------
 1 file changed, 12 insertions(+), 22 deletions(-)
 tests:  8|3
total_score: 40/70
04f7ef6
sá., 19 de abr. de 2025 12:15:15: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
b4813fc
sá., 19 de abr. de 2025 12:21:51: 
 hashmap.c | 27 +++++++++++----------------
 1 file changed, 11 insertions(+), 16 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:139:32: error: 'return' with a value, in function returning void [-Werror]
             return map->buckets[i];
                    ~~~~~~~~~~~~^~~
hashmap.c:132:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c:143:37: error: 'return' with a value, in function returning void [-Werror]
         if ( i == inicial_i) return NULL;
                                     ^~~~
hashmap.c:132:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c:145:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
hashmap.c:132:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
e4b5c9d
sá., 19 de abr. de 2025 12:22:32: 
 hashmap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:144:37: error: 'return' with a value, in function returning void [-Werror]
         if ( i == inicial_i) return NULL;
                                     ^~~~
hashmap.c:132:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
e1d7799
sá., 19 de abr. de 2025 12:23:02: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
d4757a5
sá., 19 de abr. de 2025 12:44:29: 
 hashmap.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  11|2
total_score: 50/70
3bee451
sá., 19 de abr. de 2025 12:46:13: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|2
total_score: 50/70
dc8cc09
sá., 19 de abr. de 2025 12:49:56: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
2aad812
sá., 19 de abr. de 2025 13:17:28: 
 hashmap.c | 87 ++++++++-------------------------------------------------------
 1 file changed, 11 insertions(+), 76 deletions(-)
 tests:  17|0
total_score: 70/70
3ad30c5
